--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -8,13 +8,13 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>My site</title>
+		<title>My site: About Me</title>
 	</head>
 	<body>
 <a href="/">Home</a>
 <a href="/about/">About</a>
 
-
-		<h1>My Site</h1>
+<h1>About Me</h1>
+<h2>... and my new Astro site!</h2>
 	</body>
 </html>
